# Road-Damage-Detection-Dataset-Analysis

./: README.md  pyproject.toml
analysis/: baselines_results_eda.ipynb  dataset_eda.ipynb  results_download.ipynb
hailo/src/: hailo_static.py  hailo_webcam_realtime.py  requirements.txt  yolov11n-on-road-damage-dataset.ipynb  yolov11s-on-road-damage-dataset.ipynb
training/: default-yolo11n-on-roaddamagedetection.ipynb  default-yolo11s-on-roaddamagedetection.ipynb  pytorch-ssd300-vgg16-on-road-damage-dataset.ipynb  pytorch-ssd320-mobilenetv3-on-road-damage.ipynb  yolov11n-kfold-roaddamagedetection.ipynb  yolov11s-kfold-roaddamagedetection.ipynb  yolov8n-on-roaddamagedetection.ipynb
